# Dopey_Robot_Project

./: LICENSE  NN_classify_new copy.py  README.md  frames_2024-04-26_16.21.05.gv  train_w_class_v2.py
NeuralNetV0/Dataset/: display_dataset.py  via_region_data.csv
controller/: package.xml  setup.py
controller/controller/: cartesian_controller.py  keyboard_controller.py  open_loop_controller.py  smth.txt
detection/detection/: detection.py
display_markers/display_markers/: display_markers.py
dopey/: CMakeLists.txt  package.xml
dopey/launch/: demo.launch.xml  demo.py  static.xml
log/: latest_list
odometry/: package.xml  setup.py
odometry/odometry/: odometry.py
robp_boot_camp/: LICENSE  README.md
robp_boot_camp/robp_boot_camp_distance_sensor/: CMakeLists.txt
robp_boot_camp/robp_boot_camp_distance_sensor/include/robp_boot_camp_distance_sensor/: distance_sensor.h
robp_boot_camp/robp_boot_camp_distance_sensor/launch/: distance_sensor_launch.xml
robp_boot_camp/robp_boot_camp_distance_sensor/src/: distance_sensor_node.cpp
robp_boot_camp/robp_boot_camp_interfaces/: CMakeLists.txt
robp_boot_camp/robp_boot_camp_launch/: setup.cfg  setup.py
robp_boot_camp/robp_boot_camp_launch/launch/: boot_camp_part2_launch.xml
robp_boot_camp/robp_boot_camp_motors/: CMakeLists.txt
robp_boot_camp/robp_boot_camp_motors/include/robp_boot_camp_motors/: kobuki_motors.h
robp_boot_camp/robp_boot_camp_motors/src/: motors.cpp
robp_boot_camp/robp_boot_camp_world/: CMakeLists.txt
robp_boot_camp/robp_boot_camp_world/src/: world.cpp
src/camera_config/: cam_config.yaml
src/controller/: package.xml  setup.py
src/controller/controller/: a_star.py  arm_controller.py  arm_controller_sub.py  astar.py  cartesian_controller.py  ik.py  ik_backup.py  keyboard_controller.py  move.py  state_machine.py  wall_following_controller.py
src/controller_config/: lg.config.yaml
src/detection/: setup.py
src/detection/annotations/: merged.json  training_b.json
src/detection/detection/: calib_arm.yaml  calib_realsense.yaml  dataset_collector.py  detection_NN_b.py  detection_arm_cam.py  detector.py  detector_b.py  train_b.py  utils.py  utils_b.py
src/detection/detection/deprecated/: NN_test_detect_b.py  detection.py  detection_NN.py  detection_NN_2.py  detection_NN_st.py  detector_kevin.py  utils_kevin.py
src/display_markers/: package.xml
src/display_markers/display_markers/: display_markers.py
src/dopey/: CMakeLists.txt  package.xml
src/dopey/launch/: controller.launch.xml  demo.launch.xml  lidar.launch.xml  phidgets_launch.py  static.xml
src/dopey/scripts/: start_rviz.sh
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.xml
src/install/realsense2_camera_msgs/share/realsense2_camera_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  realsense2_camera_msgsConfig-version.cmake  realsense2_camera_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
src/install/realsense2_camera_msgs/share/realsense2_camera_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
src/install/realsense2_camera_msgs/share/realsense2_camera_msgs/msg/: Extrinsics.idl  Extrinsics.msg  IMUInfo.idl  IMUInfo.msg  Metadata.idl  Metadata.msg  RGBD.idl  RGBD.msg
src/install/realsense2_camera_msgs/share/realsense2_camera_msgs/srv/: DeviceInfo.idl  DeviceInfo.srv  DeviceInfo_Request.msg  DeviceInfo_Response.msg
src/install/robp_interfaces/share/robp_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/robp_interfaces/share/robp_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  robp_interfacesConfig-version.cmake  robp_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
src/install/robp_interfaces/share/robp_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
src/install/robp_interfaces/share/robp_interfaces/msg/: DutyCycles.idl  DutyCycles.msg  Encoders.idl  Encoders.msg
src/install/robp_phidgets_temperature/share/robp_phidgets_temperature/: package.bash  package.zsh
src/install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/rplidar_ros/share/rplidar_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  rplidar_rosConfig-version.cmake  rplidar_rosConfig.cmake
src/install/rplidar_ros/share/rplidar_ros/environment/: ament_prefix_path.dsv  path.dsv
src/install/rplidar_ros/share/rplidar_ros/launch/: rplidar_a1_launch.py  rplidar_a2m12_launch.py  rplidar_a2m7_launch.py  rplidar_a2m8_launch.py  rplidar_a3_launch.py  rplidar_c1_launch.py  rplidar_s1_launch.py  rplidar_s1_tcp_launch.py  rplidar_s2_launch.py  rplidar_s2e_launch.py  rplidar_s3_launch.py  rplidar_t1_launch.py  view_rplidar_a1_launch.py  view_rplidar_a2m12_launch.py  view_rplidar_a2m7_launch.py  view_rplidar_a2m8_launch.py  (+8 more)
src/log/: latest_build
src/odometry/odometry/: odometry.py
src/service_definitions/: CMakeLists.txt  package.xml
src/service_definitions/srv/: AddToMap.srv
src/slam/: package.xml  setup.py
src/slam/slam/: NN_detections_handler.py  grid_map.py  helper.py  lidar_filter.py  slam.py  test.py  test2.py
src/slam/slam/ws/: ws.tsv
src/texttospeech/: speech.py
(+101 files in other folders)
