<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dopey</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kevinnoventa@gmail.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>python3-numpy</depend>
  <depend>python3-open3d-pip</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>static_transform_publisher</exec_depend>
  <exec_depend>odometry</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robp_phidgets_motors</exec_depend>
  <exec_depend>robp_phidgets_encoders</exec_depend>
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>robp_launch</exec_depend>
  <exec_depend>slam</exec_depend>




  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
